    Compare, instance-of, cast, castable, treat, promote).
  * Fixed bug #911585 (management of variables during eval)
  * Fixed bug #866423 (fn:empty and fn:exists iterators must reset their input in
    case of early-out)
  * More efficient implementation for base64Binary items
  * Added index management function to the C++ api's StaticCollectionManager.
  * Fixed bug #872288 (reset recursive flag during node rename)
  * Fixed bug #905041 (allow for the default element and function namespaces to be
    set multiple times via the c++ api).
  * Fixed bug #907872 (segfault when returning an input ItemSequence from an external function).
  * Fixed bug #905050 (setting and getting the context item type via the c++ api).
  * Added createDayTimeDuration, createYearMonthDuration, createDocumentNode, createCommentNode, createPiNode to api's ItemFactory.
  * Fixed bug in codegen: do not create a materialize clause if one exists already
  * Added split function to the string module that allows for streamable tokenization but doesn't have regular expression
    support.
  * Fixed bug involving positional var and groupby 
  * Optimization: preallocate and reuse temp sequence iterator for LetVarITerator
    and CtxVarIterator.
  * Optimization: enhanced push-down of positional predicate into LetVarITerator
    and CtxVarIterator.
  * Fixed bug #867266 (do not hoist updating expressions)
  * Fixed bug #867022 (added location and params to some XPTY0004 errors)
  * zerr is not predeclared anymore to be http://www.zorba-xquery.com/errors
  * Add new XQuery interface for the PHP bindings.
  * Added two API methods StaticContext::getFunctions to introspect the functions of a static context
  * Added API method Item::getNamespaceBindings().
  * Added a transcoding streambuffer to the API which allows transcoding arbitrary encodings
    from and to UTF-8
  * file:read-text is able to handle arbitrary encodings (fixes bug #867159)