@@ -18,4 +18,4 @@ import module namespace mod2 = "http://www.mod2.com/" at "file:///${CMAKE_CURREN
 
 import module namespace ddl = "http://www.zorba-xquery.com/modules/store/static/collections/ddl";
 
-1+1
+mod2:foo()
