@@ -23,6 +23,7 @@ version 2.2
     case of early-out)
   * More efficient implementation for base64Binary items
   * Added index management function to the C++ api's StaticCollectionManager.
+  * Fixed bug #945241 (StaticCollectionManager::declaredIndexes() and temporary indexes)
   * Fixed bug #872288 (reset recursive flag during node rename)
   * Fixed bug #905041 (allow for the default element and function namespaces to be
     set multiple times via the c++ api).
